--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Young Serif";
+  src: url("./assets/fonts/young-serif/YoungSerif-Regular.ttf")
+    format("truetype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("./assets/fonts/outfit/Outfit-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: 100 900;
+}
+
+:root {
+  --font-size-xxl: 2.25rem;
+  --font-size-xl: 1.75rem;
+  --font-size-lg: 1.25rem;
+  --font-size-rg: 1rem;
+}
+
+@media (min-width: 40rem) {
+  :root {
+    --font-size-xxl: 2.5rem;
+  }
+}
